Fix FindBugs performance warnings